styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Noto+Sans:wght@200&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    font-family: Comfortaa, serif;
    overflow-x: hidden;
    @apply selection:bg-uranianBlue;
}

